--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,19 @@ li{
 /*=======Light/Dark theme button=======*/
 
 /*=======Scroll bar=======*/
+::-webkit-scrollbar{
+  width:10px;
+  background: var(--scroll-bar-color);
+}
+
+::-webkit-scrollbar-thumb{
+  background:var(--scroll-thumb-color) ;
+  border-radius: 2em;
+}
+
+::-webkit-scrollbar-thumb:hover{
+  background: var(--scroll-thumb-hover-color);
+}
 
 /*=======Header=======*/
 header{
@@ -77,10 +90,16 @@ header{
   transition: .6s ease;
 }
 
+header.sticky{
+  background: rgba(225,225,225,0.1);
+  box-shadow: var(--box-shadow);
+
+}
+
 .nav-bar{
   position: relative;
-  height: calc(4rem +1rem);
-  max-width: 1250;
+  height: calc(4rem + 1rem);
+  max-width: 1250px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -90,8 +109,12 @@ header{
   transition: .6s ease;
 }
 
+header.sticky .nav-bar{
+  height: calc(2.5rem + 1rem);
+}
+
 .nav-bar .logo{
-  color:var(--first-color) ;
+  color: var(--first-color) ;
   font-size: 1.3em;
   font-weight: 600;
 }
@@ -111,12 +134,380 @@ header{
 }
 /*=======Home section=======*/
 
+.home{
+  position: relative;
+  max-width: 1250px;
+  min-height: 100vh;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 4rem 2rem;
+  flex-direction: column;
+}
+
+.home .home-cointainer{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.home-cointainer .media-icons{
+  display: flex;
+  flex-direction: column;
+  margin-right: 40px;
+}
+
+.home-cointainer .media-icons a{
+  color: var(--second-color);
+  font-size: 1.5em;
+  margin: 10px 0;
+}
+
+.home-cointainer .media-icons a:hover{
+color: var(--hover-color);
+}
+
+.home-cointainer .info h2{
+  font-size: 4em;
+  font-weight: 600;
+  line-height: 70px;
+}
+
+.home-cointainer .info h3{
+  color: var(--)var(--third-color);
+  font-feature-settings: 1.3em;
+  font-weight: 600;
+  line-height: 50px;
+}
+
+.home-cointainer .info p{
+  color: var(--third-color);
+  font-size: var(--normal-font-size);
+  max-width: 350px;
+}
+
+.btn{
+  background: var(--second-color);
+  color: #fff;
+  font-size: var(--normal-font-size);
+  font-weight: 500;
+  display: inline-block;
+  margin-top: 25px;
+  padding: 20px 30px;
+  letter-spacing: 1px;
+  border-radius: 10px;
+
+}
+
+.btn:hover{
+  background: var(--hover-color);
+}
+
+.home-cointainer .home-img{
+  position: relative;
+}
+
+.home-cointainer .home-img img{
+  width: 90%;
+  transform: translate(0,0);
+}
+
+.home .scroll-down{
+  color: var(--first-color);
+  font-size: var(--normal-font-size);
+  font-weight: 500;
+  margin-top: 20px;
+}
+
+.home .scroll-down i{
+  color: var(--second-color);
+  font-size: 1.2em;
+  animation: arrow-down ease 2s infinite;
+}
+@keyframes arrow-down{
+  0%{
+    transform: translateY(0);
+  }
+  30%{
+    transform: translateY(10px);
+  }
+}
+
 /*=======Common styles for all sections=======*/
+.flex-center{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section{
+  position: relative;
+  width: 1150px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 6rem 2rem 2rem;
+}
+
+.sub-section{
+  position: relative;
+  width: 1150px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 6rem 0;
+}
+
+.section-title-01{
+  font-size: 4.5em;
+  font-weight: 800;
+  margin-bottom: 2rem;
+  background: linear-gradient(to top,transparent 0%,var(--first-color) 70%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  opacity: .1;
+}
+
+.section-title-02{
+  font-size: 2.5em;
+  font-weight: 700;
+transform: translateY(-80px);
+}
+
+.section-title-02::before{
+ content: '';
+ position: absolute;
+ width: 70px;
+ height: 5px;
+ right: 0;
+ bottom: 0;
+ background: var(--second-color);
+}
+
+.container{
+position: relative;
+flex-direction: column;
+}
 
 /*=======About section=======*/
+.about .container .content{
+  column-gap: 40px;
+  width: 100%;
+}
 
+.about-img{
+  position: relative;
+}
+
+.about-img img{
+  max-width: 100%;
+  min-width: 500px;
+  border-radius: 10px;
+}
+
+.about-info .description{
+  max-width: 600px;
+}
+
+.about-info .description h3{
+  font-size: 2em;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.about-info .description h4{
+  font-size: 1.3em;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.about-info .description h4 span{
+color: var(--second-color);
+}
+
+.about-info .description p{
+  color: var(--third-color);
+  font-size: var(--normal-font-size);
+  margin-bottom: 15px;
+  padding-bottom: 25px;
+  border-bottom: 2px solid var(--line-color);
+  }
+
+  .about-info .professional-list{
+    display: flex;
+    column-gap: 30px;
+  }
+
+  .about-info .professional-list .list-item h3{
+    font-size: 2.5em;
+    font-weight: 700;
+  }
+
+  .about-info .professional-list .list-item span{
+    color: var(--third-color);
+    font-size: var(--small-font-size);
+  }
 /*=======Skills section=======*/
+.skills .container .content{
+  width: 100%;
+}
 
+.skills-description{
+  max-width: 700px;
+  margin-bottom: 50px;
+}
+
+ .skills-description h3{
+  font-size: 2em;
+  margin-bottom: 5px;
+}
+
+.skills-info{
+  max-width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+  margin: 0 auto;
+}
+
+.skills-info h4{
+  margin-bottom: 20px;
+} 
+
+ .skills-info h4 label{
+  background: var(--second-color);
+  color: #fff;
+  font-size: var(--normal-font-size);
+  font-weight: 400;
+  padding: 5px 15px;
+  border-radius: 5px;
+}
+
+.education-all{
+  margin-bottom: 80px;
+}
+
+.edu-list .item{
+  background: var(--card-bd-color);
+  box-shadow: var(--box-shadow);
+  border-bottom: 3px solid var(--second-color);
+  padding: 20px;
+  margin-top: 15px;
+  border-radius: 6px;
+  transition: .3s ease;
+} 
+
+.edu-list .item .year{
+  font-size: var(--small-font-size);
+  margin-bottom: 5px;
+}
+
+.edu-list .item p{
+  color: var(--third-color);
+  font-size: var(--small-font-size);
+}
+
+.edu-list .item p span{
+  color: var(--first-color);
+  font-size: var(--normal-font-size);
+  font-weight: 500;
+}
+
+.bar{
+  background:var(--card-bd-color) ;
+  box-shadow: var(--box-shadow);
+  margin-bottom: 10px;
+  padding: 20px;
+  border-radius: 6px;
+  transition: .3s ease;
+}
+
+.bar .info{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+  font-size: var(--small-font-size);
+}
+
+.bar .info span{
+  font-weight: 500;
+}
+
+.bar .line{
+  position: relative;
+  width: 100%;
+  height: 7px;
+  background: #c5cadf;
+  border-radius: 2px;
+}
+
+.bar .line:before{
+  content: '';
+  position: absolute;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: var(--second-color);
+  border-radius: 2px;
+}
+
+.bar .html:before{
+width: 95%;
+}
+
+.bar .css:before{
+  width: 85%;
+}
+  
+.bar .javascript:before{
+  width: 80%;
+}
+    
+.bar .jquary:before{
+  width: 80%;
+}
+      
+.bar .php:before{
+  width: 75%;
+}
+        
+.experience-card{
+  background: var(--card-bd-color);
+  border-bottom: 3px solid var(--second-color);
+  padding: 35px;
+  border-radius: 6px;
+  box-shadow: var(--box-shadow);
+  transition: .3s ease;
+}                 
+
+.experience-card .upper{
+  line-height: 30px;
+}
+
+.experience-card h3{
+  font-size: 1.3em;
+  font-weight: 700;
+}
+
+.experience-card h5{
+  font-size: var(--small-font-size);
+  font-weight: 500;
+  font-style: italic;
+}
+
+.experience-card span{
+  color: var(--third-color);
+}
+
+.experience-card .hr{
+ width: 100%;
+ height: 2px;
+ background: var(--line-color);
+ margin: 10px 0 22px;
+}
+
+.edu-list .item:hover, .bar:hover, .experience-card:hover{
+  transform: scale(1.03);
+}
 /*=======Services section=======*/
 
 /*=======Portfolio section=======*/
@@ -126,7 +517,42 @@ header{
 /*=======Our Clients=======*/
 
 /*=======Contact section=======*/
+.contact .container .content{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
 
+.contact-left h2{
+  font-size: 2.1em;
+  font-weight: 800;
+  margin-bottom: 40px;
+}
+
+.contact-list li{
+  margin-bottom: 40px;
+}
+
+.contact-list li h3{
+  font-size:1.3em ;
+  font-weight: 600;
+  margin-bottom: 10px;
+}
+
+.contact-list li h3 i{
+  color: var(--third-color);
+  font-size: 1.3em;
+  margin-right: 10px;
+}
+
+.contact-list li span{
+color: var(--third-color);
+margin-left: 40px;
+}
+
+.contact-list li span a{
+  color: var(--third-color);
+}
 /*=======Footer=======*/
 
 /*=======Media query max-width 1070px=======*/
