--- a/css/style.css
+++ b/css/style.css
@@ -1003,5 +1003,14 @@ footer a{
   }
 
 
+
+
+
+
+
+/* //////////////////////////////////////////////////////// */
+
+
+
   /*=======Get-in-touch section=======*/
 }
